--- a/DKS-Signalgenerator/AndroidManifest.xml
+++ b/DKS-Signalgenerator/AndroidManifest.xml
@@ -3,10 +3,12 @@
     package="de.rub.dks.signal.generator"
     android:versionCode="1"
     android:versionName="1.0" >
+    
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-sdk
         android:minSdkVersion="14"
-        android:targetSdkVersion="19" />
+        android:targetSdkVersion="21" />
 
     <application
         android:allowBackup="true"
